feat: list, get, create, delete actions for users (#18)
